feat: 25591 : improve/cleanup existing virtual map tests
Signed-off-by: Artur Kugal <artur.kugal@swirldslabs.com>