@@ -22,13 +22,13 @@ import com.hedera.pbj.runtime.io.buffer.Bytes;
 import com.swirlds.base.function.CheckedFunction;
 import com.swirlds.base.state.MutabilityException;
 import com.swirlds.virtualmap.VirtualMap;
+import com.swirlds.virtualmap.VirtualTestBase;
 import com.swirlds.virtualmap.config.VirtualMapConfig;
 import com.swirlds.virtualmap.datasource.VirtualHashChunk;
 import com.swirlds.virtualmap.datasource.VirtualLeafBytes;
 import com.swirlds.virtualmap.test.fixtures.TestKey;
 import com.swirlds.virtualmap.test.fixtures.TestValue;
 import com.swirlds.virtualmap.test.fixtures.TestValueCodec;
-import com.swirlds.virtualmap.test.fixtures.VirtualTestBase;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.security.MessageDigest;
@@ -530,93 +530,72 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         // Now, we will release the oldest, cache0
         cache0.release();
         assertEventuallyDoesNotThrow(
-                () -> {
-                    validateLeaves(cache1, asList(null, bananaLeaf1, dateLeaf1, appleLeaf1, eggplantLeaf1));
-                },
+                () -> validateLeaves(cache1, asList(null, bananaLeaf1, dateLeaf1, appleLeaf1, eggplantLeaf1)),
                 Duration.ofSeconds(1),
                 "expected cache1 to eventually become clean");
         assertEventuallyDoesNotThrow(
-                () -> {
-                    validateLeaves(
-                            cache2,
-                            asList(
-                                    dateLeaf1,
-                                    appleLeaf1,
-                                    eggplantLeaf1,
-                                    cherryLeaf2,
-                                    figLeaf2,
-                                    bananaLeaf2,
-                                    grapeLeaf2));
-                },
+                () -> validateLeaves(
+                        cache2,
+                        asList(dateLeaf1, appleLeaf1, eggplantLeaf1, cherryLeaf2, figLeaf2, bananaLeaf2, grapeLeaf2)),
                 Duration.ofSeconds(1),
                 "expected cache2 to eventually become clean");
         assertEventuallyDoesNotThrow(
-                () -> {
-                    validateLeaves(
-                            cache3,
-                            asList(
-                                    dogLeaf3,
-                                    grapeLeaf3,
-                                    eggplantLeaf1,
-                                    cherryLeaf2,
-                                    foxLeaf3,
-                                    bananaLeaf3updated,
-                                    appleLeaf3updated));
-                },
+                () -> validateLeaves(
+                        cache3,
+                        asList(
+                                dogLeaf3,
+                                grapeLeaf3,
+                                eggplantLeaf1,
+                                cherryLeaf2,
+                                foxLeaf3,
+                                bananaLeaf3updated,
+                                appleLeaf3updated)),
                 Duration.ofSeconds(1),
                 "expected cache3 to eventually become clean");
         assertEventuallyDoesNotThrow(
-                () -> {
-                    validateLeaves(
-                            cache4,
-                            asList(
-                                    dogLeaf3,
-                                    grapeLeaf3,
-                                    eggplantLeaf1,
-                                    cherryLeaf2,
-                                    foxLeaf3,
-                                    bananaLeaf3updated,
-                                    appleLeaf3updated));
-                },
+                () -> validateLeaves(
+                        cache4,
+                        asList(
+                                dogLeaf3,
+                                grapeLeaf3,
+                                eggplantLeaf1,
+                                cherryLeaf2,
+                                foxLeaf3,
+                                bananaLeaf3updated,
+                                appleLeaf3updated)),
                 Duration.ofSeconds(1),
                 "expected cache4 to eventually become clean");
 
         // Now we will release the next oldest, cache 1
         cache1.release();
         assertEventuallyDoesNotThrow(
-                () -> {
-                    validateLeaves(cache2, asList(null, null, null, cherryLeaf2, figLeaf2, bananaLeaf2, grapeLeaf2));
-                },
+                () -> validateLeaves(cache2, asList(null, null, null, cherryLeaf2, figLeaf2, bananaLeaf2, grapeLeaf2)),
                 Duration.ofSeconds(1),
                 "expected cache2 to eventually become clean");
         assertEventuallyDoesNotThrow(
-                () -> {
-                    validateLeaves(
-                            cache3,
-                            asList(
-                                    dogLeaf3,
-                                    grapeLeaf3,
-                                    null,
-                                    cherryLeaf2,
-                                    foxLeaf3,
-                                    bananaLeaf3updated,
-                                    appleLeaf3updated));
-                },
+                () -> validateLeaves(
+                        cache3,
+                        asList(
+                                dogLeaf3,
+                                grapeLeaf3,
+                                null,
+                                cherryLeaf2,
+                                foxLeaf3,
+                                bananaLeaf3updated,
+                                appleLeaf3updated)),
                 Duration.ofSeconds(1),
                 "expected cache3 to eventually become clean");
         assertEventuallyDoesNotThrow(
-                () -> {
-                    validateLeaves(
-                            cache4,
-                            asList(
-                                    dogLeaf3,
-                                    grapeLeaf3,
-                                    null,
-                                    cherryLeaf2,
-                                    foxLeaf3,
-                                    bananaLeaf3updated,
-                                    appleLeaf3updated));
-                },
+                () -> validateLeaves(
+                        cache4,
+                        asList(
+                                dogLeaf3,
+                                grapeLeaf3,
+                                null,
+                                cherryLeaf2,
+                                foxLeaf3,
+                                bananaLeaf3updated,
+                                appleLeaf3updated)),
                 Duration.ofSeconds(1),
                 "expected cache to eventually become clean");
     }
@@ -780,7 +759,7 @@ class VirtualNodeCacheTest extends VirtualTestBase {
     @Test
     @Tags({@Tag("VirtualMerkle"), @Tag("VirtualNodeCache"), @Tag("Lifecycle")})
     @DisplayName("Fast copy correctness tests")
-    void fastCopyCorrectness() throws InterruptedException {
+    void fastCopyCorrectness() {
         // put A->APPLE into the oldest cache
         final VirtualNodeCache cache0 = cache;
         final VirtualLeafBytes<TestValue> appleLeaf0 = appleLeaf(1);
@@ -1119,7 +1098,7 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         final List<VirtualLeafBytes> dirtyLeaves =
                 cache1.dirtyLeavesForFlush(1, 1).toList();
         assertEquals(1, dirtyLeaves.size(), "incorrect number of dirty leaves");
-        assertEquals(aardvarkLeaf1, dirtyLeaves.get(0), "there should be no dirty leaves");
+        assertEquals(aardvarkLeaf1, dirtyLeaves.getFirst(), "there should be no dirty leaves");
     }
 
     /**
@@ -1999,7 +1978,7 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         // One last copy, so we can get the dirty leaves without an exception
         final VirtualMap map4 = map3.copy();
 
-        final List<VirtualLeafBytes> deletedLeaves0 = cache0.deletedLeaves().collect(Collectors.toList());
+        final List<VirtualLeafBytes> deletedLeaves0 = cache0.deletedLeaves().toList();
         assertEquals(0, deletedLeaves0.size(), "No deleted leaves in cache0");
 
         cache0.seal();
@@ -2040,7 +2019,7 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         final List<CacheInfo> snapshots = caches.stream()
                 .map(original ->
                         new CacheInfo(original.cache.snapshot(), original.firstLeafPath, original.lastLeafPath))
-                .collect(Collectors.toList());
+                .toList();
 
         // Release the older caches
         caches.forEach(cacheInfo -> {
@@ -2930,7 +2909,7 @@ class VirtualNodeCacheTest extends VirtualTestBase {
 
         final List<VirtualLeafBytes> deleted = snapshot.deletedLeaves().toList();
         assertEquals(1, deleted.size(), "Snapshot should report exactly one deleted leaf");
-        assertEquals(A_KEY, deleted.get(0).keyBytes(), "The deleted leaf should be apple");
+        assertEquals(A_KEY, deleted.getFirst().keyBytes(), "The deleted leaf should be apple");
     }
 
     @Test
@@ -3097,17 +3076,7 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         }
     }
 
-    private static class CacheInfo {
-        VirtualNodeCache cache;
-        long firstLeafPath;
-        long lastLeafPath;
-
-        CacheInfo(final VirtualNodeCache cache, final long first, final long last) {
-            this.cache = cache;
-            this.firstLeafPath = first;
-            this.lastLeafPath = last;
-        }
-    }
+    private record CacheInfo(VirtualNodeCache cache, long firstLeafPath, long lastLeafPath) {}
 
     private static class TrackingHashChunkLoader implements CheckedFunction<Long, VirtualHashChunk, IOException> {
 
