@@ -555,7 +555,7 @@ class VirtualPipelineTests {
             assertFalse(copy.isShutdownHandlerCalled(), "Should not be invoked yet");
         }
 
-        copies.get(0).getPipeline().terminate();
+        copies.getFirst().getPipeline().terminate();
         final var lastCopy = copies.get(copyCount - 1);
         assertTrue(lastCopy.getPipeline().awaitTermination(5, SECONDS), "Timed out");
         assertTrue(lastCopy.isShutdownHandlerCalled(), "Callback should now be invoked");
@@ -644,7 +644,7 @@ class VirtualPipelineTests {
         final VirtualMapConfig config = configuration.getConfigData(VirtualMapConfig.class);
 
         final List<DummyVirtualRoot> copies = setupCopies(copyCount, i -> false);
-        DummyVirtualRoot last = copies.get(copies.size() - 1);
+        DummyVirtualRoot last = copies.getLast();
         DummyVirtualRoot afterCopy = last.copy();
         afterCopy.setShouldBeFlushed(true);
         afterCopy.copy(); // make it immutable and eligible to flush
@@ -688,7 +688,7 @@ class VirtualPipelineTests {
             // Set all copies small enough, so none of them should be flushed even after merge
             copy.setEstimatedSize(config.copyFlushCandidateThreshold() / (copyCount + 1));
         }
-        DummyVirtualRoot last = copies.get(copies.size() - 1);
+        DummyVirtualRoot last = copies.getLast();
         DummyVirtualRoot afterCopy = last.copy();
         afterCopy.setShouldBeFlushed(true);
         afterCopy.copy(); // make afterCopy immutable / eligible to flush
@@ -846,11 +846,9 @@ class VirtualPipelineTests {
         final List<DummyVirtualRoot> copies = setupCopies(NUM_COPIES, i -> false);
 
         final DummyVirtualRoot penultimate = copies.get(copies.size() - 2);
-        final DummyVirtualRoot last = copies.get(copies.size() - 1);
+        final DummyVirtualRoot last = copies.getLast();
         final Hash[] hashes = new Hash[NUM_COPIES];
-        IntStream.range(0, NUM_THREADS).parallel().forEach(i -> {
-            hashes[i] = penultimate.getHash();
-        });
+        IntStream.range(0, NUM_THREADS).parallel().forEach(i -> hashes[i] = penultimate.getHash());
         for (final Hash hash : hashes) {
             assertSame(hash, hashes[0]);
         }
